# libpano13

./: .hgeol  .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.hg  ChangeLog.svn  ColourBrightness.c  ColourBrightness.h  FindGnuTar.cmake  LocalDefs.props  LocalDefs.vsprops  Makefile  Makefile.am  NEWS  PTDialogs.c  PTcommon.c  PTcommon.h  PaniniGeneral.c  PaniniGeneral.h  PixMap.c  PixMap.h  README  README.linux  README.mac  README.windows  TODO  Triangulate.c  ZComb.c  ZComb.h  adjust.c  adjust.h  bmp.c  bootstrap  configure.ac  correct.c  dump.c  excludes  f2c.h  fftn.c  (+72 more)
Debian/: postinst
debian/: README.source  TODO  changelog  control  copyright  libpano13-bin.docs  rules  watch
debian/patches/: 10_workaround_libtool_link_as_needed_bug  20_bumpsoname.diff  series
doc/: Makefile.am  Optimize.txt  PTmender.readme  PTremap.readme  developmentPolicy.txt  stitch.txt
m4/: Makefile.am  ax_check_graphics.m4  ax_check_java.m4
man/: CMakeLists.txt  Makefile.am  PTAInterpolate.1  PTblender.1  PTcrop.1  PTinfo.1  PTmasker.1  PTmender.1  PToptimizer.1  PToptimizer.pod  PTroller.1  PTtiff2psd.1  PTtiffdump.1  PTuncrop.1  panoinfo.1
obsolete/: sys_mac.c
tests/: CMakeLists.txt  ChangeLog  Makefile.am  panoAutomateOptimizerTest.pl  panoAutomateTest.pl  tiff2psdTest.bat
tests/simpleOptimizer/: CMakeLists.txt  test1.txt
tests/simpleOptimizer/reference/: test1.txt
tests/simpleStitch/: CMakeLists.txt  ChangeLog  Makefile  Makefile.am  README.txt  simple.txt
tests/simpleStitch/reference/: Makefile.am  psd.psd  psd_mask.psd  psd_no_mask.psd  tiff_deflate.tif  tiff_lzw.tif  tiff_m0000.tif  tiff_m0001.tif  tiff_m_cropped0000.tif  tiff_m_cropped0001.tif  tiff_mask0000.tif  tiff_none.tif
tests/simpleTiff16/: CMakeLists.txt  ChangeLog  Makefile.am  temp.txt
tests/simpleTiff16/reference/: Makefile.am  psd.psd  psd_mask.psd  psd_no_mask.psd  tiff_m0000.tif  tiff_m_cropped0000.tif
tests/simpleTiff16/tests/: psd.psd  tiff_deflate.tif  tiff_m_cropped0000.tif  tiff_mask0000.tif  tiff_none.tif
tests/tiff2psdSimple/: crop.psb  crop.psd  uncrop.psb  uncrop.psd
tests/tiff2psdSimple/reference/: crop.psb  uncrop.psb
tools/: .cvsignore  CMakeLists.txt  ChangeLog  ColourBrightness.c  ColourBrightness.h  Makefile.am  PTAInterpolate.c  PTAInterpolate.vcproj  PTAInterpolate.vcxproj  PTOptimizer.c  PTOptimizer.vcproj  PTOptimizer.vcxproj  PTStitcher.cpp  PTStitcher.vcproj  PTainterpolate.rc  PTblender.c  PTblender.rc  PTblender.vcproj  PTblender.vcxproj  PTcommon.c  PTcommon.h  PTcrop.c  PTcrop.rc  PTcrop.vcproj  PTcrop.vcxproj  PTestimate.c  PTinfo.c  PTinfo.rc  PTinfo.vcproj  PTinfo.vcxproj  PTmasker.c  PTmasker.rc  PTmasker.vcproj  PTmasker.vcxproj  PTmender.c  PTmender.h  PTmender.rc  PTmender.vcproj  PTmender.vcxproj  PToptimizer.c  (+37 more)
tools/mpremap/Examples/: fisheye.mpg  perspect.mpg  script_panorama2movie
tools/mpremap/java/: classes
